# RayTracer

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Point3D.cpp  Point3D.hpp  Ray.cpp  RayTracer.cpp  RayTracer.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Sphere.cpp  Sphere.hpp  Vector3D.cpp  Vector3D.hpp  format.sh  main.cpp  scene_file.cfg
.github/workflows/: ci.yml
app/: main.cpp
interface/: CMakeLists.txt
interface/include/: APrimitives.hpp  Aabb.hpp  Bvh.hpp  Camera.hpp  Cone.hpp  Cylinder.hpp  Dielectric.hpp  DirectionalLight.hpp  Flat.hpp  Glass.hpp  Interval.hpp  Lambertian.hpp  Light.hpp  LoadFile.hpp  Macros.hpp  Material.hpp  Metal.hpp  Plane.hpp  Point3D.hpp  PrimitivesRecord.hpp  Primitives_record.hpp  Ray.hpp  Raytracer.hpp  Rectangle3D.hpp  Scene.hpp  SceneBuilder.hpp  Sphere.hpp  ToolBox.hpp  Vector3D.hpp
interface/include/raytracer/: ICamera.hpp  ILoadFile.hpp  IMaterial.hpp  IPoint3D.hpp  IPrimitives.hpp  IScene.hpp  ISceneBuilder.hpp  IVector3D.hpp
plugins/: CMakeLists.txt
plugins/CoreRenderers/: CMakeLists.txt  Camera.cpp  Ray.cpp  Rectangle3D.cpp
plugins/Lights/: CMakeLists.txt  Light.cpp
plugins/Materials/: CMakeLists.txt  Material.cpp
plugins/Materials/Flat/: Flat.cpp  (+1 more)
plugins/Math/: CMakeLists.txt  IPoint3D.hpp  Interval.cpp  Point3D.cpp  Point3D.hpp  ToolBox.cpp  Vector3D.cpp  Vector3D.hpp
plugins/Primitives/: APrimitives.cpp  APrimitives.hpp  CMakeLists.txt  IPrimitives.hpp  Sphere.hpp
plugins/Scene_loaders/: CMakeLists.txt  Factory.cpp  LoadFile.cpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp
scenes/: demo_all_primitives.cfg  demo_cone_limited.cfg  demo_cone_unlimited.cfg  demo_cylinder_limited.cfg  demo_cylinder_unlimited.cfg  demo_plane.cfg  demo_sphere.cfg  demo_sphere_all.cfg  light_ambient.cfg  light_directional.cfg  material_flat.cfg  material_glass.cfg  material_metal.cfg
screenshots/: demo_all_primitives.ppm  demo_cone_limited.ppm  demo_cone_unlimited.ppm  demo_cylinder_limited.ppm  demo_cylinder_unlimited.ppm  demo_plane.ppm  demo_sphere.ppm  demo_sphere_all.ppm  light_ambient.ppm  light_directional.ppm  material_flat.ppm  material_glass.ppm  material_metal.ppm
src/: Raytracer.cpp
(+22 files in other folders)
